# fiddle

./: README.md  ch1.py  ch2.py  ch3.py  fourierSeries.py
optimization/: .gitignore  README.md
optimization/swarm/cpp/: CMakeLists.txt
optimization/swarm/cpp/core/: CMakeLists.txt
optimization/swarm/cpp/core/include/: BenchmarkFunctions.h  Common.h  OptimizerInterface.h  OptimizerPSO.h  OptimizerPSOcuda.h  PSOcudaHelpers.h
optimization/swarm/cpp/core/src/: BenchmarkFunctions.cpp  Common.cpp  OptimizerInterface.cpp  OptimizerPSO.cpp  OptimizerPSOcuda.cpp  PSOcudaHelpers.cu
optimization/swarm/cpp/tests/: CMakeLists.txt  testPSO_1.cpp  testPSO_2.cpp
optimization/swarm/cpp/viz/: CMakeLists.txt
optimization/swarm/cpp/viz/qtViz/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtViz.pro
optimization/swarm/cpp/viz/qtViz/include/: SurfaceHandler.h  SurfaceViz.h
optimization/swarm/cpp/viz/qtViz/src/: SurfaceHandler.cpp  SurfaceViz.cpp
optimization/swarm/python/: benchmarks.py  config.py  optimizers.py  testAutoTesting.py  testBenchmarks.py
optimization/swarm/python/tests/: test3dwireframe.py
optimization/swarm/report/: report.tex  report_2.tex  wilcoxon_results.m  wilcoxon_text.txt
optimization/swarm/report/_res/: results_bat.csv  results_cuckoo.csv  results_differential.csv  results_flower.csv  results_genocop.csv  results_gravitation.csv  results_harmonic.csv  results_pso.csv  results_wolf.csv
optimization/utils/: benchmarks.py  config.py  optimizers.py  testBenchmarks.py  testInteractive.py  testPSO_noThreading.py
optimization/utils/tests/: test3dtrisurface.py  testAnimation.py  testion.py
